--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "B.S / Site Title"
+title                    : "B.S / Associate Research Professor"
 title_separator          : "-"
 name                     : &name "Dr. B.S"
 description              : &description "Associate Research Professor at Wyant College of Optical Sciences, the University of Arizona"
