--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Dr. B. S"
-  avatar           : "profile1.png"
+  avatar           : "profile.png"
   bio              : "Associate Research Professor at Wyant College of Optical Sciences, the University of Arizona"
   location         : "Tucson, Arizona"
   employer         :
