--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ author:
   bio              : "Associate Research Professor at Wyant College of Optical Sciences, the University of Arizona"
   location         : "Tucson, Arizona"
   employer         :
-  pubmed           : "https://pubmed.ncbi.nlm.nih.gov/?term=bofan+song"
+  pubmed           : ""
   googlescholar    : "https://scholar.google.com/citations?user=0R0yirsAAAAJ&hl=en"
   email            :
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
