--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Bofan Song / Associate Research Professor"
+title                    : "HOME"
 title_separator          : "-"
 name                     : &name "Dr. Bofan Song"
 description              : &description "Associate Research Professor at Wyant College of Optical Sciences, University of Arizona"
