--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 locale                   : "en-US"
 title                    : "HOME"
 title_separator          : "-"
-name                     : &name "Dr. Bofan Song"
+name                     : &name "Bofan Song"
 description              : &description "Associate Research Professor at Wyant College of Optical Sciences, University of Arizona"
 url                      : https://fan-song06.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Dr. Bofan Song"
+  name             : "Bofan Song"
   avatar           : "profile.png"
   bio              : "Associate Research Professor at Wyant College of Optical Sciences, University of Arizona"
   location         : "Tucson, Arizona"
