--- a/_config.yml
+++ b/_config.yml
@@ -109,12 +109,13 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : ""
+  twitter          :
   vine             :
   weibo            :
   xing             :
   youtube          :
   wikipedia        :
+  SPIE             : "https://spie.org/profile/bofan.song-4375379"
 
 
 # Reading Files
