--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,14 +4,14 @@ main:
     url: /publications/
 
   - title: "Conferences"
-    url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/    
+    url: /talks/     
     
   - title: "Research"
     url: /portfolio/
     
   - title: "CV"
     url: /cv/
+    
+      - title: "."
+    url: /teaching/   
     
